<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:background="@color/colorBackground"
        android:paddingLeft="5dp"
        android:text="@string/title"
        android:textColor="@color/colorEditText"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgroundLogin"
        android:padding="70dp"
        android:text="@string/softName"
        android:textAlignment="center"
        android:textColor="@color/colorEditText"
        android:textSize="60sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="70dp"
        android:paddingTop="120dp"
        android:paddingRight="70dp"
        android:paddingBottom="80dp">

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_edittext2"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_edittext2"
            android:ems="10"
            android:gravity="center"
            android:hint="**********"
            android:inputType="textPassword"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button2"
            android:text="@string/login"
            android:textColor="@color/colorEditText"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:checked="true"
            android:text="@string/checkSaveInfo"
            android:textColor="@color/colorBackgroundLogin" />
    </LinearLayout>
</LinearLayout>